<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ashishkapoor.agecalculator.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todayDateLabel"
            android:textColor="@color/blue"
            android:textSize="@dimen/label_header_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/today_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/edittext_border"
                android:editable="false"
                android:gravity="center_vertical"
                android:hint="@string/dt_hint"
                android:onClick="Calender"
                android:paddingLeft="6sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="44dp"
                android:background="@drawable/button_border"
                android:onClick="Calender"
                android:src="@drawable/image" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/dobLabel"
            android:textColor="@color/blue"
            android:textSize="@dimen/label_header_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/date_birth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/edittext_border"
                android:maxLength="10"
                android:gravity="center_vertical"
                android:hint="@string/dt_hint"
                android:inputType="number"
                android:paddingLeft="6sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="44dp"
                android:background="@drawable/button_border"
                android:onClick="Calender1"
                android:src="@drawable/image" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_green"
                android:onClick="calculate"
                android:text="@string/calculateButton"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/button_label_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_blue"
                android:onClick="OnClear"
                android:text="@string/clearButton"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/button_label_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/resultLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/ageLabel"
                android:textColor="@color/green"
                android:textSize="@dimen/label_header_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/yearslabel"
                        android:textAlignment="center"
                        android:textColor="@color/green"
                        android:textSize="@dimen/label_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/monthsLabel"
                        android:textAlignment="center"
                        android:textColor="@color/green"
                        android:textSize="@dimen/label_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/daysLabel"
                        android:textAlignment="center"
                        android:textColor="@color/green"
                        android:textSize="@dimen/label_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/age_years"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/label_size" />

                    <TextView
                        android:id="@+id/age_months"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/label_size" />

                    <TextView
                        android:id="@+id/age_days"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/label_size" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/nextBirthdayLabel"
                android:textColor="@color/green"
                android:textSize="@dimen/label_header_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/monthsLabel"
                        android:textAlignment="center"
                        android:textColor="@color/green"
                        android:textSize="@dimen/label_size" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/daysLabel"
                        android:textAlignment="center"
                        android:textColor="@color/green"
                        android:textSize="@dimen/label_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nxt_months"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/label_size" />


                    <TextView
                        android:id="@+id/nxt_days"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/label_size" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/detailInformationLabel"
                android:textColor="@color/green"
                android:textSize="@dimen/label_header_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:text="@string/totalYearsLabel"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/green"
                        android:textSize="@dimen/label_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:text="@string/totalMonthsLabel"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/green"
                        android:textSize="@dimen/label_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:text="@string/totalWeeksLabel"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/green"
                        android:textSize="@dimen/label_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:text="@string/totalDaysLabel"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/green"
                        android:textSize="@dimen/label_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:text="@string/totalHoursLabel"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/green"
                        android:textSize="@dimen/label_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:text="@string/totalMinutesLabel"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/green"
                        android:textSize="@dimen/label_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:text="@string/totalSecondsLabel"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/green"
                        android:textSize="@dimen/label_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/total_years"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/label_size" />

                    <TextView
                        android:id="@+id/total_months"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/label_size" />

                    <TextView
                        android:id="@+id/total_weeks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/label_size" />

                    <TextView
                        android:id="@+id/total_days"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/label_size" />

                    <TextView
                        android:id="@+id/total_hours"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/label_size" />

                    <TextView
                        android:id="@+id/total_mins"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/label_size" />

                    <TextView
                        android:id="@+id/total_secs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/label_size" />


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</ScrollView>
